# NovaOS1

./: .gitignore  BUILD.md  CONTRIBUTING.md  Makefile  README.md
NovaOS/: Makefile
NovaOS/base-system/live-build-config/config/: chroot.conf
NovaOS/base-system/live-build-config/config/package-lists/: gaming.list.chroot
NovaOS/branding/gtk-theme/gtk-4.0/: settings.ini
NovaOS/installer/calamares/: settings.conf
NovaOS/nova-de/nova-compositor/: README.md  meson.build
NovaOS/nova-de/nova-compositor/src/: main.rs
NovaOS/tools/: build-iso.sh  create-usb.sh  test-vm.sh
base-system/kernel/: novaos-defconfig
base-system/live-build-config/config/: binary.conf  bootstrap.conf  chroot.conf  common.conf
base-system/live-build-config/config/package-lists/: codecs.list.chroot  core.list.chroot  desktop.list.chroot
branding/grub-theme/: theme.txt
branding/gtk-theme/gtk-4.0/: gtk.css
branding/jim-grub/: theme.txt
branding/jim-plymouth/: novaos.plymouth
branding/jim-theme/gtk-4.0/: gtk.css  settings.ini
installer/calamares/: settings.conf
jim-de/jim-compositor/: README.md  meson.build
jim-de/jim-compositor/include/: jim-compositor.h
jim-de/jim-compositor/src/: jim-animations.c  jim-compositor.c  jim-input.c  jim-keybindings.c  jim-output.c  jim-render.c  jim-view.c
jim-de/jim-wm/src/: jim-wm.c
nova-de/nova-compositor/: README.md  meson.build
nova-de/nova-compositor/include/: nova-compositor.h
nova-de/nova-compositor/src/: nova-animations.c  nova-compositor.c  nova-input.c  nova-keybindings.c  nova-output.c  nova-render.c  nova-view.c
nova-de/nova-wm/src/: nova-wm.c
tools/: build-iso.sh  create-usb.sh  test-vm.sh
